...
    val scrollState = rememberScrollState()
    val pagerState = rememberPagerState()
    val currentPage = pagerState.currentPage + 1

    Column(
        modifier = Modifier
            .testTag("detail_content")
            .fillMaxSize()
            .verticalScroll(scrollState)
            .padding(vertical = 16.dp)
    ) {
        if (detail.soldQuantity > 1) {
            EmphasisText(
...
        }

        Spacer(modifier = Modifier.height(16.dp))
        Button(
            onClick = onBuyNow,
            modifier = Modifier
                .testTag("buy_button")
                .padding(horizontal = 16.dp)
                .fillMaxWidth(),
            elevation = ButtonDefaults.elevation(0.dp, 0.dp),
        ) {
            Text(stringResource(R.string.buy_now))
        }
...
