...
    val textInputService = LocalTextInputService.current

    LazyColumn(
        state = listState,
        contentPadding = PaddingValues(vertical = 8.dp),
        horizontalAlignment = Alignment.CenterHorizontally,
        modifier = Modifier.testTag("item_list")
    ) {
        itemsIndexed(data) { index: Int, item: Product ->
            ProductView(product = item) {
                onItemClick(index, item)
            }

...
