...
        ) {
            SearchBar(
                value = query,
                onValueChange = searchViewModel::changeQuery,
                onValueClear = searchViewModel::clearQuery,
                onDone = { clearFocus(focusManager, textInputService) },
                modifier = Modifier.testTag("search_input")
            )
            when (searchResult) {
                is Resource.Error -> {
                    NoDataText(searchResult.failure.translate())
                }
                Resource.Idle -> {
...
